# fastapi-crud

./: README.md  pyproject.toml  pytest.ini
app/: database.py  main.py  models.py  schemas.py
app/routers/: books.py
tests/: conftest.py  test_books.py
